# puma-dinov2-segmenter

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  config.py  docker-compose.yml  linkedin_post.txt  main.py  pyproject.toml
.github/workflows/: deploy.yml
monitoring/: alert_rules.yml  prometheus.yml
monitoring/grafana/dashboards/: puma-api-dashboard.json
monitoring/grafana/provisioning/dashboards/: dashboard.yml
optimization/: distillation.py  eval_distillation.py  eval_hybrid.py  eval_lowrank.py  eval_onnx.py  eval_pruning.py  eval_quantization.py  eval_utils.py  export_onnx.py  final_comparison.py  linkedin_chart.py  resolution_tradeoff.py
pipeline/: 01_data_visualization.py  02_feature_extractor.py  02_resnet_extractor.py  03_dataset.py  04_model.py  05_train.py  06_inference.py
research/: ADR_001_arquitetura_inicial.md  dinov2_architeture_overview.md  panoptic_pathology.md  pathology_primer.md
scratch/: collect_classes.py  inspect_geojson.py  verify_mask.py
serving/: api.py  load_model.py  preprocessing.py  student_model.py  test_api.py
utils/: logger.py
